# wood

./: .gitignore  README.md  command.txt  pyproject.toml  requirements.txt
configs/: cases.yaml  geometry_default.json  report.yaml  smoke.yaml
outputs/blank_objective_ref/20260630_062726_blank_objective_ref_all_sequential/: launcher_config.json  summary.json  summary.md
outputs/blank_objective_ref/20260630_070226_blank_objective_ref_all_sequential/: launcher_config.json  summary.json  summary.md
outputs/blank_objective_ref/20260630_081948_blank_objective_ref_all_sequential/: launcher_config.json  summary.json  summary.md
outputs/blank_objective_ref/20260630_083256_blank_objective_ref_all_sequential/: launcher_config.json  summary.json  summary.md
outputs/blank_objective_ref/20260630_085045_blank_objective_ref_all_sequential/: summary.json  summary.md
outputs/blank_objective_ref/20260630_114412_blank_objective_ref_all_sequential/: launcher_config.json  summary.json  summary.md
outputs/report_wood/: missing_artifacts.md  report_data_summary.json  wood_report.html  wood_report.md
outputs/reports/blank_objective_ref/: aggregate_summary.csv  image_index.md  per_run_final_values.csv  report.html  report.md  (+1 more)
reporting/: __init__.py  build_report.py
scripts/: install_linux_a6000.sh  install_windows.ps1
wood/: __init__.py
wood/backends/: __init__.py  instruct.py
wood/core/: __init__.py  cases.py  logging.py  losses.py  metrics.py  runner.py  runtime.py
wood/scripts/: __init__.py  build_report.py  run_matrix.py  smoke_timing.py  summarize_runs.py
(+419 files in other folders)
